--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         `${days}d ${hours}h ${minutes}m ${seconds}s`;
     }
 
-    updateTimer(); // Initial call
+    updateTimer(); // Initial cal
     setInterval(updateTimer, 1000);
   </script>
 
