--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </head>
 <body>
 
-  <h1>We Are Going Live!</h1>
+  <h1>Hey! We Are Live In...</h1>
   <div id="timer">Loading...</div>
 
   <script>
