--- a/index.html
+++ b/index.html
@@ -1,27 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chatbot</title>
-    <link rel="shortcut icon" href="chat_logo.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>We Are Going Live!</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: #ffffff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      flex-direction: column;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 3em;
+      margin-bottom: 20px;
+      color: #00ffff;
+      text-shadow: 0 0 15px #00ffff;
+    }
+
+    #timer {
+      font-size: 4em;
+      font-weight: bold;
+      background: #ffffff22;
+      padding: 20px 40px;
+      border-radius: 15px;
+      box-shadow: 0 0 20px rgba(0, 255, 255, 0.4);
+      animation: pulse 1.5s infinite ease-in-out;
+    }
+
+    @keyframes pulse {
+      0% { box-shadow: 0 0 20px rgba(0, 255, 255, 0.4); }
+      50% { box-shadow: 0 0 35px rgba(0, 255, 255, 0.8); }
+      100% { box-shadow: 0 0 20px rgba(0, 255, 255, 0.4); }
+    }
+
+    @media (max-width: 600px) {
+      h1 { font-size: 2em; }
+      #timer { font-size: 2.5em; padding: 15px 20px; }
+    }
+  </style>
 </head>
 <body>
-    <div class="dark-mode-toggle">
-        <button id="dark-mode-btn">🌙</button>
-    </div>
-    <div class="chat-container">
-        <div class="chat-box" id="chat-box">
-            <div class="message bot">"Hello! How can I help you?"</div>
-        </div>
-        <div class="input-container">
-            <input type="text" id="user-input" placeholder="Type your message here...">
-            <button onclick="sendMessage()">Send</button>
-            <button id="voice-button" onclick="startVoiceRecognition()">🎤</button>
-        </div>
-        <div id="voice-animation" class="voice-animation"></div>
-    </div>
-    <script src="scripts.js"></script>
+
+  <h1>Hey! We Are Live In...</h1>
+  <div id="timer">Loading...</div>
+
+  <script>
+    // Target date: 24 July at 6:00 PM IST (UTC+5:30)
+    const targetDate = new Date("July 24, 2025 18:00:00 GMT+0530");
+
+    function updateTimer() {
+      const now = new Date().getTime();
+      const distance = targetDate - now;
+
+      if (distance <= 0) {
+        document.getElementById("timer").innerHTML = "We Are Live Now!";
+        return;
+      }
+
+      const days = Math.floor(distance / (1000 * 60 * 60 * 24));
+      const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+      const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+      const seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+      document.getElementById("timer").innerHTML =
+        `${days}d ${hours}h ${minutes}m ${seconds}s`;
+    }
+
+    updateTimer(); // Initial cal
+    setInterval(updateTimer, 1000);
+  </script>
+
 </body>
 </html>
